# guardian-agent

./: .gitignore  README.md  pyproject.toml  requirements-streamlit.txt  requirements.txt
.streamlit/: config.toml
config/: example.env  example_profile.json
data/: cycles.jsonl
docs/: ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  REPORT_BUILD.md  icml2026.sty  refs.bib  report.tex
models/: threat_classifier.joblib  threat_classifier_metrics.json
phase2-bundle/config/: example_profile.json
phase2-bundle/docs/: ARCHITECTURE.md
phase2-bundle/src/guardian/: profile_cli.py
phase2-bundle/tests/: test_profile.py
phase3-bundle/docs/: ARCHITECTURE.md
phase3-bundle/tests/: test_smoke.py  test_weather.py
scripts/: download_storm_events.py  risk_demo.py  train_classifier.py  twilio_smoke_test.py
src/guardian/: __init__.py  agent.py  config.py  logging_setup.py  loop.py  profile.py
src/guardian/output/: __init__.py  console.py  dispatch.py  smart_home.py  sms.py
src/guardian/planning/: __init__.py  actions.py  planner.py
src/guardian/risk/: __init__.py  bayesian.py  classifier.py  features.py  risk_engine.py
src/guardian/weather/: __init__.py  aggregator.py  http.py  nws.py  owm.py  (+1 more)
streamlit_app/: Home.py  cached_engine.py  state.py
streamlit_app/components/: __init__.py  action_card.py  llm.py  posterior_chart.py  profile_form.py
streamlit_app/pages/: 1_Live_Weather.py  2_Risk_Assessment.py  3_Scenario_Simulator.py  4_About.py
tests/: test_bayesian.py  test_classifier.py  test_loop.py  test_output.py  test_planner.py  test_risk_engine.py  test_smoke.py
(+7 files in other folders)
