[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-agent"
version = "0.1.0"
description = "Context-aware intelligent agent for personalized weather hazard safety guidance."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Erfan Zarafshan" }
]
license = { text = "Academic" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short"
